<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="com.example.firstmobileapp.views.Register">

    <Button
        android:id="@+id/registerButton2"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/purple_99"
        android:layout_marginBottom="16dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="26sp"
        app:cornerRadius="50sp"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showPassword"
        app:layout_constraintVertical_bias="0.995" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/purple_99"
        android:layout_marginBottom="40dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="26sp"
        app:cornerRadius="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/inputUsername"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:autofillHints=""
        android:background="@drawable/input_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/insertName"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/inputAge"
        android:layout_width="90dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/input_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/insert_age"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/inputPhone"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputUsername" />

    <EditText
        android:id="@+id/inputPhone"
        android:layout_width="203dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:autofillHints="phone"
        android:background="@drawable/input_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/insert_phone"
        android:inputType="phone"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.721"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputUsername" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/input_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/insert_email"
        android:inputType="textPersonName|textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputAge" />

    <EditText
        android:id="@+id/inputRepeatPassword"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/input_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/insert_repeat_password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/input_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/insert_password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

    <CheckBox
        android:id="@+id/showPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/show_password"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword"
        app:layout_constraintVertical_bias="0.194" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/barberImageDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.080"
        app:srcCompat="@drawable/mustache" />

</androidx.constraintlayout.widget.ConstraintLayout>