<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="com.example.firstmobileapp.views.Login">

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/input_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/insert_password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="56dp"
        android:autofillHints=""
        android:background="@drawable/input_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/insert_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/barberImageDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.199"
        app:srcCompat="@drawable/mustache" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:layout_marginBottom="112dp"
        android:backgroundTint="@color/purple_99"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:backgroundTint="@color/transparent"
        android:fontFamily="@font/montserrat_regular"
        android:padding="0dp"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/purple_99"
        android:textSize="18sp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <CheckBox
        android:id="@+id/showPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/show_password"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/forgotPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_margin="0dp"
        android:backgroundTint="@color/transparent"
        android:padding="0dp"
        android:paddingStart="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textColor="@color/teal_700"
        android:textSize="16sp"
        android:visibility="invisible"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showPassword"
        app:layout_constraintVertical_bias="0.116"
        tools:ignore="TouchTargetSizeCheck"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>