<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".views.admin.clients.ClientRemove">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="127dp"
        android:layout_height="127dp"
        android:contentDescription="@string/mustache_desc"
        android:background="@drawable/mustache"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <EditText
        android:id="@+id/removeClientText"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="88dp"
        android:inputType="text"
        android:background="@drawable/input_text"
        android:gravity="center"
        android:hint="@string/insert_username"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        android:autofillHints="" />

    <Button
        android:id="@+id/remove_client_button"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:layout_marginTop="76dp"
        android:text="@string/remove_client"
        android:textSize="20sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/removeClientText"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>