<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".views.admin.clients.ClientAdd">

    <EditText
        android:id="@+id/username_add"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:background="@drawable/input_text"
        android:gravity="center"
        android:hint="@string/insert_username"
        android:inputType="text"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.096" />

    <EditText
        android:id="@+id/age_add"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:background="@drawable/input_text"
        android:gravity="center"
        android:hint="@string/insert_age"
        android:inputType="number"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_add"
        app:layout_constraintVertical_bias="0.054" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/mustache"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.283" />

    <EditText
        android:id="@+id/password_add"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/input_text"
        android:gravity="center"
        android:hint="@string/insert_password"
        android:inputType="text"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age_add"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/add_client_button"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/purple_99"
        android:text="@string/add_client"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_add"
        app:layout_constraintVertical_bias="0.042" />

</androidx.constraintlayout.widget.ConstraintLayout>