<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".views.admin.services.ServiceAdd">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/mustache"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.216" />

    <EditText
        android:id="@+id/insertServicePrice"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="51dp"
        android:background="@drawable/input_text"
        android:gravity="center"
        android:hint="@string/insert_service_price"
        android:inputType="numberDecimal"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insertServiceName"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/addServiceButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:background="@drawable/styled_button2"
        android:text="@string/add_service"
        android:textSize="20sp"
        app:backgroundTint="@color/purple_99"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insertServicePrice"
        app:layout_constraintVertical_bias="0.016" />

    <EditText
        android:id="@+id/insertServiceName"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/input_text"
        android:gravity="center"
        android:hint="@string/insert_service_name"
        android:inputType="text"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.005" />

</androidx.constraintlayout.widget.ConstraintLayout>