<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".views.admin.services.Services">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mustache"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/services"
            android:textColor="@color/purple_99"
            android:textSize="50sp"
            android:gravity="center"
            />

        <ListView
            android:id="@+id/servicesList"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/styled_list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.125" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addServiceScreenButton"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/add_service"
                android:textColor="@color/white"
                android:layout_weight="10"
                app:cornerRadius="30dp"
                app:backgroundTint="@color/purple_99"
                />

            <Button
                android:id="@+id/removeServiceScreenButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/remove_services"
                android:textColor="@color/white"
                android:layout_weight="10"
                app:cornerRadius="30dp"
                app:backgroundTint="@color/purple_99"
                />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
