<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".views.admin.clients.Clients">

    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mustache"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/my_clients"
            android:textColor="@color/purple_99"
            android:textSize="50sp" />

        <ListView
            android:id="@+id/clients_list_view"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_height="300dp" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/removeClientButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/purple_99"
                android:fontFamily="monospace"
                android:text="@string/remove_client"
                android:textColor="@color/white"
                android:layout_weight="10"
                android:layout_marginStart="10dp"
                app:cornerRadius="50dp"
                tools:ignore="TextContrastCheck" />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="80"
                />
            <Button
                android:id="@+id/addClientButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/purple_99"
                android:fontFamily="monospace"
                android:text="@string/add_clients"
                android:textColor="@color/white"
                android:layout_weight="10"
                android:layout_marginEnd="10dp"
                app:cornerRadius="50dp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>